Fix nav height on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 nav > a {
